# python-cookie

./: .gitignore  README.md  cookiecutter.json  main.sh  update.py
hooks/: pre_gen_project.py
{{ cookiecutter.project_name }}/: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: main.yaml  test.yml
